# neural_network_framework

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  docker-compose.yml  main.cpp
benchmark/: CMakeLists.txt  dense_benchmark.cpp  learn_dense.py  prepare_data.py  run.sh
benchmarks/: CMakeLists.txt  README.md  run.sh  tf-cpu.sh
benchmarks/cases/cifar/: config.hpp  config.py  prepare.sh
benchmarks/cases/mnist/: config.cpp  config.hpp  config.py  prepare.sh
benchmarks/infrastructure/: benchmarks.py  config_interface.cpp  config_interface.hpp  plot_results.py  runner.cpp  runner.py
benchmarks/tf-docker/: Dockerfile
cmake/: CompileOptions.cmake
data/: get.sh
data/kaggle-digit-recognizer/: unpack.sh
data/mnist/: unpack.sh
data/mnist-png/: readme.txt  unpack.sh
docker/: Dockerfile  development.sh  docker-entry-point.sh  run.sh  test.sh
examples/: CMakeLists.txt  README.md
examples/digit_recognizer/: CMakeLists.txt  digit_recognizer.cpp  run.sh
examples/hdf5/: CMakeLists.txt  generate_keras_model.py  hd5_example.cpp  run.sh
examples/images_loading/: CMakeLists.txt  images_loading.cpp  run.sh
examples/interactivity/: CMakeLists.txt  interactivity.cpp  predictions.csv  run.sh
examples/simple/: CMakeLists.txt  run.sh  simple.cpp
src/: CMakeLists.txt  arma_math.cpp  arma_math.h  arma_math.hpp  initializers.hpp  layers.hpp  loss.hpp  main.cpp  neural_network.hpp  neural_network_interface.hpp  optimizer.hpp  os_utils.hpp  playground.cpp  serializable.hpp  tensor.hpp  tmp.cpp  utils.hpp
src/callbacks/: combined_callback.hpp  interface.hpp  loggin_callback.hpp  logging_callback.hpp  meta_callbacks.hpp  performance_metrics_callback.hpp  plotting_callback.hpp  progress_bar_callback.hpp
src/data_processing/: data_utils.hpp
src/io/: csv.hpp  filesystem.hpp  img.hpp
src/layers/: activations.hpp  convolution2d.hpp  dense.hpp  dropout.hpp  flatten.hpp  interface.h  layers_enum.cpp  layers_enum.hpp  max_pooling2d.hpp
src/protos/: layers.proto
src/scoring/: scoring.hpp
src/serialization/: hdf5_serialization.hpp
tests/: CMakeLists.txt  entry_point.cpp  test_scoring.cpp  test_serialization.cpp  unit_tests.cpp  utils.cpp  utils.h
tests/protos/: layers.proto
visualization/: __main__.py  app.py  model.py
visualization/templates/: base.html  embed.html  main.html
